--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0",
+    "jose": "^6.1.3",
     "leaflet": "^1.9.4",
     "next": "16.1.6",
     "react": "19.2.3",
